# coloradar_plus_processing_tools

./: .dockerignore  .gitignore  README.md  TODO.txt  build_container.sh  build_image.sh  docker-compose.yml  examples.py  main.py  old_plot_pointclouds.py  requirements.txt
coloradar_plus_processing_tools/: Dockerfile.cuda-local  Dockerfile.cuda-noetic  README.md  __init__.py  coloradar_tools.py  create_noetic_cuda_container.sh  create_noetic_cuda_container.yml  dataset_to_kitti.py  demo.ipynb  demo_tools.py  old_plot_pointclouds.py  rosbag_parser.py  test.py  visualize_radar.py
coloradar_plus_processing_tools/c_tools/: CMakeLists.txt
coloradar_plus_processing_tools/c_tools/data_prep/: build_octomap.cpp  compare_heatmaps.cu  create_cascade_pointclouds.cpp  cuda_python_bindings.cpp  make_dataset.cpp  python_bindings.cpp  sample_map_frames.cpp  test.cpp
coloradar_plus_processing_tools/c_tools/include/: coloradar_cuda.h  coloradar_run.h  coloradar_run.hpp  configs.h  dataset.h  internal.h  internal.hpp  pcl_functions.hpp  types.h  utils.h
coloradar_plus_processing_tools/c_tools/libs/: coloradar_run.cpp  configs.cpp  dataset.cpp  internal.cpp  octo_pointcloud.cpp  pcl_functions.cpp
coloradar_plus_processing_tools/utils/: __init__.py  calibration.py  find_cuda_image.py  load.py  rosbag_stats.py  rosmsg_to_numpy.py  save.py  tf.py  visualize.py
coloradar_tools/: CMakeLists.txt  README.md  build_container.sh  demo.ipynb  docker-compose.yml  export_config.yaml  requirements.txt
coloradar_tools/docker/: cuda.Dockerfile  dummy.Dockerfile  main.Dockerfile  os.Dockerfile  ros.Dockerfile
coloradar_tools/scripts/: add_cubes_to_bags.py  add_heatmaps_to_bags.py  demo_tools.py  find_base_image.py  import_tools.py  utils.py
coloradar_tools/src/data_prep/: cuda_python_bindings.cpp  interpolate_poses_for_lidar.cpp  interpolate_poses_for_radar.cpp  python_bindings.cpp  test.cpp
coloradar_tools/src/include/: coloradar_run.hpp  coloradar_tools.h  dataset.h  dataset_configs.h  device.h  internal.h  internal.hpp  pcl_functions.hpp  radar_configs.h  utils.h
coloradar_tools/src/libs/: coloradar_run.cpp  configs.cpp  dataset.cpp  dataset_configs.cpp  device.cpp  pcl_functions.cpp  radar_configs.cpp  radar_processing.cu
coloradar_tools/src/test/: test_coloradar_tools.cpp
coloradar_tools/tests/: test_base_image.py  test_bindings.py
configs/: processing_config-orig.yaml  processing_config.yaml  processing_config_anna.yaml  processing_config_doncey.yaml
docker/: docker-compose.yml  main.Dockerfile  ros-versions.yaml  ros1-tools.Dockerfile  tools.Dockerfile
new_scripts/: extract_data.py  fix_heatmap_timestamps.py  get_sequence_stats.py  main.py  plot_accumulated_lidar.py  processing_config.yaml
new_scripts/calib_old/cascade/: antenna_cfg.txt  heatmap_cfg.txt  phase_frequency_calib.txt  waveform_cfg.txt
new_scripts/calib_old/single_chip/: antenna_cfg.txt  heatmap_cfg.txt  waveform_cfg.txt
new_scripts/calib_old/transforms/: base_to_cascade.txt  base_to_imu.txt  base_to_lidar.txt  base_to_single_chip.txt  base_to_vicon.txt
new_scripts/coloradarplus_tools/: __init__.py  bag_parser.py  crp_visualization.py  crpt_dataset_to_kitti.py  crpt_rosbag_parser.py  crpt_rosbag_stats.py  crpt_slerp_pose.py  crpt_visualizer.py  dataset_to_kitti.py  get_sequence_stats.py  old_calibration.py  old_dataset_loaders.py  old_plot_pointclouds.py
new_scripts/utils/: extract_data.py
rosbag_tools/: fix_heatmap_timestamps.py
